--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,7 @@ body div#fullscreen-background div#video-background {
 }
 
 body div#wrapper header {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
   padding-top: 5px;
   font-size: 1.2rem;
   display: -webkit-box;
@@ -45,7 +45,7 @@ body div#wrapper header {
 }
 
 body div#wrapper header div.center-title {
-  margin-top: 11px;
+  margin-top: 5px;
   font-size: 1.7rem;
 }
 
@@ -76,10 +76,13 @@ body div#wrapper header a:hover {
   color: black;
 }
 
+body div#content div.content-div {
+  display: none;
+}
+
 body div#content div#home-div {
-  width: 90vw;
+  width: 80vw;
   height: 300px;
-  background-color: lightcyan;
   margin: 0 auto;
 }
 
@@ -91,11 +94,8 @@ body div#content div#home-div div.row {
   display: flex;
 }
 
-body div#content div#home-div div.row:nth-child(odd) {
-  background-color: red;
-}
-
 body div#content div#home-div div.row img {
+  padding: 0 10px;
   height: 60px;
   float: left;
   -webkit-box-flex: 1;
@@ -104,6 +104,8 @@ body div#content div#home-div div.row img {
 }
 
 body div#content div#home-div div.row p {
+  color: white;
+  font-size: 1.2em;
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
@@ -113,9 +115,16 @@ body footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 50px;
-  background-color: black;
+  width: calc(100% - 30px);
+  height: 33px;
+  padding: 15px;
+  background-color: rgba(0, 0, 0, 0.9);
   color: white;
+}
+
+body footer img {
+  float: right;
+  height: 32px;
+  margin-right: 29px;
 }
 /*# sourceMappingURL=style.css.map */
