--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,6 +139,30 @@ body div#content div#resume-div {
   }
 }
 
+body div#content div#about-div {
+  width: 80vw;
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 20px auto;
+  border-radius: 3px;
+}
+
+body div#content div#about-div h3 {
+  margin-bottom: 20px;
+}
+
+body div#content div#about-div p:not(:last-child) {
+  margin-bottom: 23px;
+}
+
+@media only screen and (max-width: 700px) {
+  body div#content div#about-div {
+    width: 90vw;
+    margin-top: 0;
+    border-radius: 0;
+  }
+}
+
 body footer {
   position: fixed;
   bottom: 0;
