--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 $breakpoint:700px;
 $topbar-height:59px;
 $topbar-color:rgba(0,0,0,0.4);
+$div-radius:3px;
 @font-face {
 	font-family:NotoSans;
 	src:url(../fonts/NotoSansJP-Regular.otf);
@@ -91,7 +92,7 @@ body {
 			div.logos {
 				margin:12px 0 48px;
 				padding:24px;
-				border-radius:3px;
+				border-radius:$div-radius;
 				display:flex;
 				justify-content:center;
 				flex-wrap:wrap;
@@ -108,6 +109,24 @@ body {
 			margin:0 auto;
 			@media only screen and (max-width: $breakpoint) {
 				width: 90vw;
+			}
+		}
+		div#about-div {
+			width:80vw;
+			padding:30px;
+			background-color:rgba(255,255,255,0.8);
+			margin:20px auto;
+			border-radius: $div-radius;
+			h3 {
+				margin-bottom:20px;
+			}
+			p:not(:last-child) {
+				margin-bottom:23px;
+			}
+			@media only screen and (max-width: $breakpoint) {
+				width: 90vw;
+				margin-top:0;
+				border-radius:0;
 			}
 		}
 	}
