--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,22 +15,13 @@ body {
   /************** footer **************/
 }
 
-body div#fullscreen-background {
+body video {
   position: fixed;
-  top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: -100;
-}
-
-body div#fullscreen-background div#video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1000;
 }
 
 body header {
