--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,21 +12,13 @@ $div-radius:3px;
 	font-family:NotoSans;
 }
 body {
-	div#fullscreen-background {
+	video {
 		position:fixed;
-		top: 0;
 		right: 0;
 		bottom: 0;
-		left: 0;
-		overflow: hidden;
-		z-index: -100;
-		div#video-background {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-		}
+		min-width: 100%;
+		min-height: 100%;
+		z-index:-1000;
 	}
 /************* header **************/
 	header {
