--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,134 +11,10 @@ $div-radius:3px;
 	padding:0;
 	font-family:NotoSans;
 }
-body {
-	video {
-		position:fixed;
-		right: 0;
-		bottom: 0;
-		min-width: 100%;
-		min-height: 100%;
-		z-index:-1000;
-	}
-/************* header **************/
-	header {
-		height:$topbar-height;
-		height:$topbar-height;
-		background-color:$topbar-color;
-		padding-top:5px;
-		font-size:1.2rem;
-		img {
-			margin-left:15px;
-			float:left;
-		}
-		div {
-			float:right;
-			div {
-				margin-top:12px;
-				@media only screen and (max-width:$breakpoint) {
-					background-color:$topbar-color;
-					float:left;
-					position:fixed;
-					top:64px;
-					right:0;
-					margin-top:0;
-					width:0px;
-				}
-				a {
-					@media only screen and (max-width:$breakpoint) {
-						padding:30px;
-					}
-					float:left;
-					text-decoration:none;
-					color:white;
-					margin-right:20px;
-					display:block;
-					@media only screen and (max-width:$breakpoint) {
-						// display:none;
-					}
-				}
-			}
-			a#hamburger {
-				text-decoration:none;
-				color:white;
-				margin-right:20px;
-				font-size:2rem;
-				@media only screen and (min-width:$breakpoint) {
-					display:none;	
-				}
-			}
-		}
-	}
-/************ content **************/
-	div#content {
-		div.content-div {
-			display:none;
-		}
-		div#home-div {
-			width:80vw;
-			margin:32px auto;
-			h2 {
-				color:white;
-				text-align:center;
-			}
-			div.logos {
-				margin:12px 0 48px;
-				padding:24px;
-				border-radius:$div-radius;
-				display:flex;
-				justify-content:center;
-				flex-wrap:wrap;
-				background-color:rgba(255, 255, 255, 0.1);
-				img {
-					padding:12px;
-					height:60px;
-					float:left;
-				}
-			}
-		}
-		div#resume-div {
-			width:500px;
-			margin:0 auto;
-			@media only screen and (max-width: $breakpoint) {
-				width: 90vw;
-			}
-		}
-		div#about-div {
-			width:80vw;
-			padding:30px;
-			background-color:rgba(255,255,255,0.8);
-			margin:20px auto;
-			border-radius: $div-radius;
-			h3 {
-				margin-bottom:20px;
-			}
-			p:not(:last-child) {
-				margin-bottom:23px;
-			}
-			@media only screen and (max-width: $breakpoint) {
-				width: 90vw;
-				margin-top:0;
-				border-radius:0;
-			}
-		}
-	}
-/************** footer **************/
-	footer {
-		position:fixed;
-		bottom:0;
-		left:0;
-		width:calc(100% - 30px);
-		height:33px;
-		padding:15px;
-		background-color:rgba(0,0,0,0.9);
-		color:white;
-		div {
-			float:left;
-		}
-		img {
-			float:right;
-			height:32px;
-			margin-right:29px;
-		}
-	}
-}
+@import 'video';
+@import 'footer';
+@import 'header';
+@import 'resume';
+@import 'content';
+@import 'about';
+@import 'home';
