changed div to article and nav

--- a/scss/_resume.scss
+++ b/scss/_resume.scss
@@ -1,5 +1,5 @@
 // _resume.scss
-div#resume-div {
+article#resume {
 	width:500px;
 	margin:0 auto;
 	@media only screen and (max-width: $breakpoint) {
