--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,16 +52,16 @@ header img {
   float: left;
 }
 
-header div {
+header nav {
   float: right;
 }
 
-header div div#nav-links {
+header nav div#nav-links {
   margin-top: 12px;
 }
 
 @media only screen and (max-width: 700px) {
-  header div div#nav-links {
+  header nav div#nav-links {
     background-color: rgba(0, 0, 0, 0.9);
     float: left;
     position: fixed;
@@ -74,7 +74,7 @@ header div div#nav-links {
   }
 }
 
-header div div#nav-links a {
+header nav div#nav-links a {
   float: left;
   text-decoration: none;
   color: white;
@@ -83,14 +83,14 @@ header div div#nav-links a {
 }
 
 @media only screen and (max-width: 700px) {
-  header div div#nav-links a {
+  header nav div#nav-links a {
     padding: 30px 0 30px 30px;
     float: none;
     text-align: right;
   }
 }
 
-header div a#hamburger {
+header nav a#hamburger {
   text-decoration: none;
   color: white;
   margin-right: 20px;
@@ -98,27 +98,27 @@ header div a#hamburger {
 }
 
 @media only screen and (min-width: 700px) {
-  header div a#hamburger {
+  header nav a#hamburger {
     display: none;
   }
 }
 
-div#resume-div {
+article#resume {
   width: 500px;
   margin: 0 auto;
 }
 
 @media only screen and (max-width: 700px) {
-  div#resume-div {
+  article#resume {
     width: 90vw;
   }
 }
 
-div#content div.content-div {
+div#content article.content {
   display: none;
 }
 
-div#about-div {
+article#about {
   width: 80vw;
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.8);
@@ -126,33 +126,33 @@ div#about-div {
   border-radius: 3px;
 }
 
-div#about-div h3 {
+article#about h3 {
   margin-bottom: 20px;
 }
 
-div#about-div p:not(:last-child) {
+article#about p:not(:last-child) {
   margin-bottom: 23px;
 }
 
 @media only screen and (max-width: 700px) {
-  div#about-div {
+  article#about {
     width: 90vw;
     margin-top: 0;
     border-radius: 0;
   }
 }
 
-div#home-div {
+article#home {
   width: 80vw;
   margin: 32px auto;
 }
 
-div#home-div h2 {
+article#home h2 {
   color: white;
   text-align: center;
 }
 
-div#home-div div.logos {
+article#home div.logos {
   margin: 12px 0 48px;
   padding: 24px;
   border-radius: 3px;
@@ -167,7 +167,7 @@ div#home-div div.logos {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-div#home-div div.logos img {
+article#home div.logos img {
   padding: 12px;
   height: 60px;
   float: left;
