--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,19 +1,15 @@
 // _about.scss
 article#about {
-	width:80vw;
-	padding:30px;
-	background-color:rgba(255,255,255,0.8);
-	margin:20px auto;
-	border-radius: $div-radius;
+	@extend %info;
+	@media only screen and (max-width: $breakpoint - 1) {
+		width: 90vw;
+		margin-top:0;
+		border-radius:0;
+	}
 	h3 {
 		margin-bottom:20px;
 	}
 	p:not(:last-child) {
 		margin-bottom:23px;
-	}
-	@media only screen and (max-width: $breakpoint) {
-		width: 90vw;
-		margin-top:0;
-		border-radius:0;
 	}
 }
