--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -3,21 +3,20 @@ nav {
 	float:right;
 	div#nav-links {
 		margin-top:12px;
-		@media only screen and (max-width:$breakpoint) {
+		@media only screen and (max-width:$breakpoint - 1) {
 			background-color:rgba(0,0,0,0.9);
 			float:left;
 			position:fixed;
 			top:64px;
-			right:0;
+			height:100vh;
+			width:135px;
+			right:-135px;
 			margin-top:0;
-			width:0px;
-			transition: width 0.5s;
+			transition:1s;
 		}
 		a {
-			@media only screen and (max-width:$breakpoint) {
-				padding:30px 0 30px 30px;
-				float:none;
-				text-align:right;
+			@media only screen and (max-width:$breakpoint - 1) {
+				padding:39px 0 15px 29px;
 			}
 			float:left;
 			text-decoration:none;
@@ -25,5 +24,9 @@ nav {
 			margin-right:20px;
 			display:block;
 		}
+	}
+	div.open-menu {
+		right:0 !important;
+		transition:1s;
 	}
 }
