--- a/scss/_resume.scss
+++ b/scss/_resume.scss
@@ -2,7 +2,18 @@
 article#resume {
 	width:500px;
 	margin:0 auto;
-	@media only screen and (max-width: $breakpoint) {
+	@media only screen and (max-width: $breakpoint - 1) {
 		width: 100vw;
+	}
+	iframe {
+		@media only screen and (max-width: $breakpoint - 1) {
+			display:none;
+		}
+	}
+	div {
+		@extend %info;
+		@media only screen and (min-width: $breakpoint) {
+			display:none;
+		}
 	}
 }
