updated font in css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,7 @@
-@font-face {
-  font-family: NotoSans;
-  src: url(../fonts/NotoSansJP-Regular.otf);
-}
-
 * {
   margin: 0;
   padding: 0;
-  font-family: NotoSans;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 video {
