--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@ $div-radius:3px;
 	font-weight: 400;
 	font-display: swap;
 	src: local('Noto Sans'), local('NotoSans'), url(https://fonts.gstatic.com/s/notosans/v9/o-0IIpQlx3QUlC5A4PNr5TRA.woff2) format('woff2');
+}
 * {
 	margin:0;
 	padding:0;
