--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -6,18 +6,30 @@ article#home {
 		color:white;
 		text-align:center;
 	}
-	div.logos {
+	div.logos, div.contact {
 		margin:12px 0 48px;
 		padding:24px;
 		border-radius:$div-radius;
 		display:flex;
 		justify-content:center;
 		flex-wrap:wrap;
+		background-color:rgba(255, 255, 255, 0.8);
+	}
+	div.logos {
+		width:auto;
 		background-color:rgba(255, 255, 255, 0.4);
 		img {
 			padding:12px;
 			height:60px;
 			float:left;
 		}
+	}
+	div.contact {
+		width:30%;
+		@media only screen and (max-width: 1080px) {
+			width:80%;
+			text-align:center;
+		}
+		margin:0 auto;
 	}
 }
