--- a/public/css/style.css
+++ b/public/css/style.css
@@ -251,11 +251,47 @@ nav div.open-menu {
   transition: 1s;
 }
 
-article#resume div, article#about {
+article#resume div, article#about, article#contact {
   width: 80vw;
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.8);
   margin: 20px auto;
   border-radius: 3px;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], input[type=tel], select, textarea {
+  width: 100%;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid #ccc;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical;
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 /*# sourceMappingURL=style.css.map */
