--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,8 @@
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans', sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 video {
@@ -209,6 +211,7 @@ div#hamburger span.menu-bottom-click {
 }
 
 nav {
+  display: none;
   float: right;
 }
 
@@ -280,18 +283,19 @@ input[type=text], input[type=tel], select, textarea {
 }
 
 /* Style the submit button with a specific background color etc */
-input[type=submit] {
+button {
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  background-color: #757575;
+  color: white;
+}
+
+button:hover {
+  color: black;
+  background-color: white;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
-/* Add a background color and some padding around the form */
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
 /*# sourceMappingURL=style.css.map */
