--- a/public/scss/_contact.scss
+++ b/public/scss/_contact.scss
@@ -15,21 +15,21 @@ input[type=text], input[type=tel], select, textarea {
   }
   
   /* Style the submit button with a specific background color etc */
-  input[type=submit] {
+  button {
 	padding: 12px 20px;
 	border: none;
 	border-radius: 4px;
 	cursor: pointer;
+	background-color:#757575;
+	color:white;
+  }
+
+  button:hover {
+	  color:black;
+	  background-color:white;
   }
   
   /* When moving the mouse over the submit button, add a darker green color */
 //   input[type=submit]:hover {
 // 	background-color: #45a049;
 //   }
-  
-  /* Add a background color and some padding around the form */
-  .container {
-	border-radius: 5px;
-	background-color: #f2f2f2;
-	padding: 20px;
-  }
