--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,6 +13,7 @@ $div-radius:3px;
 	margin:0;
 	padding:0;
 	font-family: 'Noto Sans', sans-serif;
+	box-sizing: border-box;
 }
 @import 'video';
 @import 'footer';
