--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -3,9 +3,8 @@ footer {
 	position:fixed;
 	bottom:0;
 	left:0;
-	width:calc(100% - 30px);
+	width:100vw;
 	height:33px;
-	padding:15px;
 	background-color:rgba(0,0,0,0.9);
 	color:white;
 	div {
