--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,23 +28,25 @@ footer {
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: 33px;
+  height: 40px;
   background-color: rgba(0, 0, 0, 0.9);
   color: white;
-}
-
-footer div {
-  float: left;
-}
-
-footer div p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-size: 1.5rem;
 }
 
+footer a {
+  color: black;
+}
+
 footer img {
-  float: right;
   height: 32px;
-  margin-right: 29px;
+  margin-right: 25px;
 }
 
 header {
