--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -4,18 +4,17 @@ footer {
 	bottom:0;
 	left:0;
 	width:100vw;
-	height:33px;
+	height:40px;
 	background-color:rgba(0,0,0,0.9);
 	color:white;
-	div {
-		float:left;
-		p {
-			font-size:1.5rem;
-		}
+	display:flex;
+	justify-content:space-between;
+	font-size:1.5rem;
+	a {
+		color:black;
 	}
 	img {
-		float:right;
 		height:32px;
-		margin-right:29px;
+		margin-right:25px;
 	}
 }
